--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<html lang=ru>
+    <head>
+        <meta charset="utf-8">
+        <title>Седона</title>
+    </head>
+    <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <header class="main-header">
+        <nav class="main-navigation">
+         <a class="main-header-logo">
+          <img src="img/index-logo.svg" wight="368" height="153" alt="Логотип Седоны">
+         </a> 
+        <ul class="site-navigation">
+            <li><a href="info.html">Информация</a></li>
+            <li><a href="foto.html">Фото и видео</a></li>
+            <li><a href="maps.html">Карта штата</a></li>
+            <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>  
+        </nav>
+      </header>
 
-  </body>
+    <main class="container">
+       <div class="Sedona"> 
+       <h1>СЕДОНА - НЕБОЛЬШОЙ ГОРОДЕ В АРИЗОНЕ, ЗАСЛУЩИВАЮЩИЙ БОЛЬШЕГО!</h1>
+       <h2>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН</h2>
+       </div> 
+       <div class="small-sity">
+         <h3>НАСТОЯЩИЙ ГОРОДОК</h3>
+         <p>СЕДОНА - НЕ АТТАРКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+         <a class="logo">
+          <img src="img/index-logo.svg" wight="368" height="153" alt="Городок">
+         </a>  
+       </div>  
+       <div class="tourism">
+        <ul class="feature-list">
+          <li class="feature-item">
+            <a class="logo">
+            <img src="img/index-logo.svg" wight="368" height="153" alt="Жилье">
+            </a> 
+            <h2>ЖИЛЬЕ</h2>
+            <p>РЕКОМЕНДУЕМ ЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, КАК В КИНО!</p>
+          </li>
+          <li class="feature-item">  
+            <a class="logo">
+            <img src="img/index-logo.svg" wight="368" height="153" alt="Еда">
+          </a> 
+          <h2>ЕДА</h2>
+          <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ!</p>
+          </li>
+          <li class="feature-item">
+          <a class="logo">
+            <img src="img/index-logo.svg" wight="368" height="153" alt="Сувениры">
+          </a> 
+          <h2>СУВЕНИРЫ</h2>
+          <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА</p> 
+          </li>
+        </ul> 
+      </div>  
+      <div class="bridge">
+        <h3>ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+        <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ,КОНЕЧНО, ВЫ ОСМЕЛИТЕСЬ</p>
+        <a class="logo">
+        <img src="img/index-logo.svg" wight="368" height="153" alt="Мост дьявола">
+        </a> 
+      </div> 
+      <div class="small">
+       <ul>
+        <li class="feature-item"> 
+        <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+        <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+        </li>
+        <li class="feature-item">
+        <h3>КРАСИВАЯ ДОРОГА</h3>
+        <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p>
+        </li>   
+        <li class="feature-item">
+        <h3>МАЛО ТУРИСТОВ</h3>
+        <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
+        </li> 
+       </ul>
+      </div>  
+
+      <section class="interest">
+       <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+       <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ П/ОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+       <!-- здесь будет форма -->
+      </section>
+     </main>
+     <footer class="main-footer">
+      <div class="footer-hashtag">
+       <a class="social-button" href="#">Instagram</a>
+      </div> 
+      <div class="footer-social">
+       <ul>
+        </li>
+        <li class="feature-item">
+         <a class="social-button" href="#">Twitter</a>
+         <a class="social-button" href="#">Facebook</a>
+         <a class="social-button" href="#">Youtube</a>
+        </li> 
+       </ul>
+      </div> 
+      <div class="footer-copyright">
+       <p>WEBSITE BY</p>
+       <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+      </div>
+     </footer>
+    </body>
 </html>
